# yoruba-numbers

./: .clang-format  .clang-tidy  CMakeLists.txt
.github/workflows/: cmake.yml
include/: converter.hh  factor.hh  factor0.hh  factor20.hh  factor200.hh  lookuptable.hh  unit.hh
lib/: converter.cpp  factor0.cpp  factor20.cpp  factor200.cpp  hello.cpp  unit.cpp
src/: convert.cpp
test/: CMakeLists.txt  test_convert.cpp
